# wdt_server

./: .coveragerc  .editorconfig  .env-sample  .envrc-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.github/workflows/: testandbuild.yml
basket/: admin.py  models.py
order/: admin.py  models.py
order/migrations/: 0001_initial.py
scripts/: start.sh  wait_for_database.sh
wdt/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
wdt/basket/: admin.py  apps.py  models.py  schema.py
wdt/basket/migrations/: 0001_initial.py  0002_auto_20210205_1542.py  0003_remove_basket_owner_id.py
wdt/basket/resolvers/: basket.py  basket_item.py  basket_mutations.py
wdt/basket/tests/: test_add_basket_item.py  test_clear_basket.py  test_get_basket.py  test_remove_basket_item.py  test_update_basket_item.py
wdt/fixtures/: data.json
wdt/menu/: admin.py  apps.py  models.py  schema.py
wdt/menu/fixtures/: data.json
wdt/menu/migrations/: 0001_initial.py
wdt/menu/resolvers/: item.py  menu.py  section.py  section_item.py
wdt/menu/tests/: test_get_item.py  test_get_items.py  test_get_menu.py  test_get_menus.py  test_get_section.py  test_get_sections.py
wdt/order/: apps.py  models.py  schema.py
wdt/order/migrations/: 0002_auto_20210210_1712.py
wdt/order/resolvers/: order.py  order_item.py  order_mutations.py
wdt/order/tests/: test_add_order.py  test_get_order.py
wdt/schema/: custom_types.py  schema.graphql  schema.py
wdt/shared/: exceptions.py
wdt_api/: asgi.py  settings.py  urls.py  wsgi.py
wdt_server/: asgi.py  settings.py  wsgi.py
