[tool.poetry]
name = "wdt_server"
version = "0.1.0"
description = ""
authors = ["Zac Tolley <zac@thetolleys.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
psycopg2 = "^2.8.6"
ariadne = "^0.12.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
