[tool.poetry]
name = "wdt_server"
version = "0.1.0"
description = ""
authors = ["Zac Tolley <zac@thetolleys.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
psycopg2 = "^2.8.6"
ariadne = "^0.12.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.2"
coverage = "^5.4"
black = "^20.8b1"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
flake8-bugbear = "^20.11.1"
flake8-commas = "^2.0.0"
add-trailing-comma = "^2.1.0"
pre-commit = "^2.10.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
