[tool.poetry]
name = "wdt_server"
version = "0.1.0"
description = ""
authors = ["Zac Tolley <zac@thetolleys.com>"]
license = "MIT"

[tool.poetry.dependencies]
Django = "^3.1.6"
ariadne = "^0.12.0"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
python = "^3.9"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
add-trailing-comma = "^2.1.0"
black = "^20.8b1"
coverage = "^5.4"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-commas = "^2.0.0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.11.1"
pre-commit = "^2.10.1"
pynvim = "^0.4.2"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
exclude = '/migrations/'
